--- a/how to make homepage.html
+++ b/how to make homepage.html
@@ -10,7 +10,7 @@
 <!--2. terminal 내 cd Vsc code 폴더명 -->
 <!--3. git init -->
 <!--4. git add. -->
-<!--5. git commit -m "Initial commit" -->
+<!--5. git commit -m "commit message" -->
 <!--6. git remote add origin https://github.com/your_username/your_repository_name.git -->
 <!--7. git push -u origin master -->
 <!-- 폴더내 html 파일 생성 및 html 5 적용 및 body 등 작업 실시 -->
